# cppserver

./: .gitignore  CMakeLists.txt  CMakeListsCore_README.md  CMakeListsServerClient_README.md  InitWSLSetting.sh  InitWindowSetting.bat  MakeCMakeList.sh  MakePacketHandlerCore.bat  MakePacketHandlerCore.sh  MakePacketHandlerServerClient.bat  MakePacketHandlerServerClient.sh  MakeProtobufCore.bat  MakeProtobufCore.sh  MakeProtobufServerClient.bat  MakeProtobufServerClient.sh  README.md  Server.sln  TODO.txt  TestProto.sh
Common/Protocol/Protobuf/: CSEnum.pb.cc  CSEnum.pb.h  CSProtocol.pb.cc  CSProtocol.pb.h  CSProtocol.proto  CSStruct.pb.cc  CSStruct.pb.h  CSStruct.proto
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  CoreGlobal.cpp  CoreGlobal.h  CorePch.h  CoreTLS.cpp  CoreTLS.h  MakeCoreProtobuf.bat  MakeProtobuf.bat  pch.h
Core/Core/: LockQueue.h  Macros.h  Structs.h  Types.h
Core/Job/: GlobalQueue.h  Job.h  JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h
Core/Lock/: CustomLock.cpp  CustomLock.h  CustomReadLockGuard.cpp  CustomReadLockGuard.h  CustomWriteLockGuard.cpp  DeadLockProfiler.cpp  DeadLockProfiler.h
Core/Memory/: Memory.cpp  Memory.h  MemoryPool.cpp  MemoryPool.h  ObjectPool.h
Core/Memory/Allocator/: PoolAllocator.cpp  STLAllocator.cpp
Core/Memory/Buffer/: RecvBuffer.cpp  RecvBuffer.h  SendBuffer.cpp  SendBuffer.h  SendBufferChunk.cpp  SendBufferChunk.h  SendBufferManager.cpp  SendBufferManager.h
Core/Memory/SmartPointer/: CustomEnableSharedFromThis.cpp  CustomEnableSharedFromThis.h
Core/Network/: IOCPEvent.h  IOCPObject.h  Listener.cpp  Listener.h  NetAddress.cpp  NetAddress.h  NetCore.h  NetObject.h  PacketSession.cpp  PacketSession.h  Service.cpp  Service.h  Session.cpp  Session.h  SocketUtil.cpp  SocketUtil.h  SocketUtil_posix.cpp  SocketUtil_win.cpp
Core/Network/Epoll/: EpollCore.cpp  EpollCore.h  EpollEvent.cpp  EpollEvent.h  EpollListener.cpp  EpollListener.h  EpollObject.cpp  EpollObject.h  EpollSession.cpp  EpollSession.h
Core/Network/IOCP/: IOCPCore.cpp  IOCPCore.h  IOCPEvent.cpp  IOCPEvent.h  IOCPListener.cpp  IOCPListener.h  IOCPObject.cpp  IOCPObject.h  IOCPSession.cpp  IOCPSession.h
Core/Protocol/: CorePacketHandler.cpp  CorePacketHandler.h
Core/Protocol/Protobuf/: Enum.pb.h  Protocol.pb.cc  Protocol.pb.h  Protocol.proto  Struct.pb.h
Core/Thread/: ThreadManager.cpp  ThreadManager.h
Include/Core/: Container.h  CoreGlobal.h  CorePch.h  CoreTLS.h  CustomLock.h  CustomReadLockGuard.h  CustomWriteLockGuard.h  IOCPEvent.h  IOCPObject.h  Job.h  JobTimer.h  Listener.h  Macros.h  Memory.h  MemoryPool.h  NetAddress.h  ObjectPool.h  PoolAllocator.h  STLAllocator.h  SendBuffer.h  Service.h  Session.h  SocketUtil.h  Structs.h  ThreadManager.h  Types.h
PacketGenerator/: ClientPacketGenerator.py  MakeListsGenerator.py  MakeListsGeneratorCore.py  MakeListsGeneratorServerClient.py  MakePacketHandler.bat  PacketGenerator.py  PacketGenerator.pyproj  PacketGeneratorCore.py  PacketGeneratorServerClient.py  ServerPacketGenerator.py
PacketGenerator/Templates/: CMakeLists.txt.j2  CMakeListsClient.txt.j2  CMakeListsCore.txt.j2  CMakeListsCore_back.txt.j2  CMakeListsServer.txt.j2  ClientPacketHandler.h  PacketHandler.h  ServerPacketHandler.h
Server/: CMakeLists.txt  Main.cpp  MakeServerClientProtobuf.bat  Server.sln  Server.vcxproj  Server.vcxproj.filters  pch.h
Server/Network/: ServerSession.cpp  ServerSession.h
Server/Protocol/: ClientPacketHandler.cpp  ClientPacketHandler.h
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  main.cpp  pch.cpp  pch.h
Test/Protocol/: ServerPacketHandler.cpp  ServerPacketHandler.h
TestClient/: TestClient.cpp  TestClient.vcxproj  TestClient.vcxproj.filters  pch.h
